--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -20,7 +20,7 @@ $border-color: #CCCCCC;
 $main-font-face: 'Quicksand';
 $body-font-size: 14pt;
 $body-font-family: sans-serif;
-$body-line-height: 150%;
+$body-line-height: 1.5;
 $header-font-size: 32pt;
 $info-font-size: 16pt;
 $info-font-family: $main-font-face, sans-serif;
@@ -41,7 +41,6 @@ $main-width: 640px;
 $site-header-height: $unit;
 $header-margin: $unit;
 
-
 //mixins
 @mixin layout-main {
 	width: $main-width - $unit;
@@ -57,6 +56,9 @@ $header-margin: $unit;
 	background-image:         linear-gradient(to bottom, $first 0%, $next);
 }
 
+@mixin main-box-radius() {
+	border-radius: 6px;
+}
 @mixin main-box-shadow($color: #000) {
 	box-shadow: 0 0 4px $color;
 }
