--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -36,7 +36,7 @@ $margin-align-left: 0 auto 0 0;
 $margin-align-right: 0 0 0 auto;
 
 //dimentions
-$main-width: 640px;
+$main-width: 640px - $unit / 4;
 
 $site-header-height: $unit;
 $header-margin: $unit;
@@ -59,6 +59,6 @@ $header-margin: $unit;
 @mixin main-box-radius() {
 	border-radius: 6px;
 }
-@mixin main-box-shadow($color: #000) {
+@mixin main-box-shadow($color: rgba(0, 0, 0, .15)) {
 	box-shadow: 0 0 4px $color;
 }
