--- a/style.css
+++ b/style.css
@@ -57,11 +57,11 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
   z-index: 100; }
   #SiteHeader #HeaderContent {
-    width: 640px;
+    width: 629px;
     margin: 0 auto; }
     #SiteHeader #HeaderContent #Logo {
       float: left;
-      width: 160px;
+      width: 157.25px;
       color: white;
       font-family: "Quicksand", sans-serif;
       font-size: 14pt;
@@ -75,10 +75,10 @@ h1, h2, h3, h4, h5, h6 {
           text-decoration: none; }
     #SiteHeader #HeaderContent nav {
       margin: 0 0 0 auto;
-      width: 320px; }
+      width: 314.5px; }
 
 #Main {
-  width: 640px;
+  width: 629px;
   margin: 0 auto;
   position: relative;
   margin-top: 44px;
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6 {
   #Main #Article .singleArticle .articleBody {
     padding: 44px 22px;
     background-color: #fefefe;
-    box-shadow: 0 0 4px black;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
     border-radius: 6px;
     font-size: 14pt;
     font-family: sans-serif;
@@ -122,7 +122,7 @@ h1, h2, h3, h4, h5, h6 {
   background-image: linear-gradient(to bottom, #fcfcfc 0%, white);
   opacity: .5; }
   #SiteFooter #SiteNav {
-    width: 640px;
+    width: 629px;
     margin: 0 auto; }
     #SiteFooter #SiteNav ul {
       color: #666666;
