fix searchbox style

--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -16,6 +16,9 @@ $info-color: #666;
 
 $border-color: #CCCCCC;
 
+$button-top-color: #CCCCCC;
+$button-bottom-color: #999999;
+
 //font
 $main-font-face: 'Quicksand';
 $body-font-size: 14pt;
