--- a/style.css
+++ b/style.css
@@ -236,33 +236,33 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     color: #333333;
     padding: 0 8px;
-    height: 29px;
-    min-width: 54px;
+    height: 25px;
+    min-width: 25px;
     border: 1px solid #cccccc;
     border-radius: 2px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-color: #cccccc;
-    background-color: #fefefe;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#fefefe), to(#fefefe));
-    background-image: -webkit-linear-gradient(top, #fefefe, #fefefe);
-    background-image: -moz-linear-gradient(top, #fefefe, #fefefe);
-    background-image: -ms-linear-gradient(top, #fefefe, #fefefe);
-    background-image: -o-linear-gradient(top, #fefefe, #fefefe);
-    background-image: linear-gradient(top, #fefefe, #fefefe);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fefefe',EndColorStr='#fefefe'); }
+    background-color: #cccccc;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#cccccc), to(#999999));
+    background-image: -webkit-linear-gradient(top, #cccccc, #999999);
+    background-image: -moz-linear-gradient(top, #cccccc, #999999);
+    background-image: -ms-linear-gradient(top, #cccccc, #999999);
+    background-image: -o-linear-gradient(top, #cccccc, #999999);
+    background-image: linear-gradient(top, #cccccc, #999999);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#cccccc',EndColorStr='#999999'); }
   #SiteHeader .cse input.gsc-search-button:hover,
   #SiteHeader input.gsc-search-button:hover, #Main .cse input.gsc-search-button:hover,
   #Main input.gsc-search-button:hover {
     border-color: #cccccc;
-    background-color: #fefefe;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#fefefe), to(#fefefe));
-    background-image: -webkit-linear-gradient(top, #fefefe, #fefefe);
-    background-image: -moz-linear-gradient(top, #fefefe, #fefefe);
-    background-image: -ms-linear-gradient(top, #fefefe, #fefefe);
-    background-image: -o-linear-gradient(top, #fefefe, #fefefe);
-    background-image: linear-gradient(top, #fefefe, #fefefe);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fefefe',EndColorStr='#fefefe'); }
+    background-color: #cccccc;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#cccccc), to(#999999));
+    background-image: -webkit-linear-gradient(top, #cccccc, #999999);
+    background-image: -moz-linear-gradient(top, #cccccc, #999999);
+    background-image: -ms-linear-gradient(top, #cccccc, #999999);
+    background-image: -o-linear-gradient(top, #cccccc, #999999);
+    background-image: linear-gradient(top, #cccccc, #999999);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#cccccc',EndColorStr='#999999'); }
   #SiteHeader .cse input.gsc-search-button:focus,
   #SiteHeader input.gsc-search-button:focus, #Main .cse input.gsc-search-button:focus,
   #Main input.gsc-search-button:focus {
@@ -274,7 +274,7 @@ h1, h2, h3, h4, h5, h6 {
   #Main input.gsc-search-button-v2 {
     width: 13px;
     height: 13px;
-    padding: 6px 27px;
+    padding: 6px 6px;
     min-width: 13px;
     margin-top: 2px; }
   #SiteHeader .gsc-refinementHeader, #Main .gsc-refinementHeader {
