--- a/scss/_google_site_search.scss
+++ b/scss/_google_site_search.scss
@@ -56,4 +56,10 @@
 		padding: 6px;
 		margin: 0;
 	}
+	//search result
+	.cse .gsc-control-cse, .gsc-control-cse {
+		background-color: $main-background-color;
+		@include main-box-radius;
+		@include main-box-shadow;
+	}
 }
