--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,6 +93,7 @@ h1,h2,h3,h4,h5,h6 {
 	@include layout-main;
 	position: relative;
 	margin-top: $site-header-height;
+	padding-bottom: $unit;
 	z-index: 1;
 	#Article {
 		.singleArticle {
