--- a/scss/style.scss
+++ b/scss/style.scss
@@ -95,6 +95,29 @@ h1,h2,h3,h4,h5,h6 {
 	margin-top: $site-header-height;
 	padding-bottom: $unit;
 	z-index: 1;
+	#Index {
+		.articleList {
+			li {
+				padding: $unit $unit / 2;
+				background-color: $main-background-color;
+				@include main-box-shadow;
+				@include main-box-radius;
+				line-height: $body-line-height;
+				a {
+					display: block;
+					width: 100%;
+					height: 100%;
+					text-decolation: none;
+					.articleDate {
+						display: block;
+					}
+					.articleTitle {
+						font-size: $header-font-size;
+					}
+				}
+			}
+		}
+	}
 	#Article {
 		.singleArticle {
 			.articleDate {
