--- a/style.css
+++ b/style.css
@@ -86,6 +86,21 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 44px;
   padding-bottom: 44px;
   z-index: 1; }
+  #Main #Index .articleList li {
+    padding: 44px 22px;
+    background-color: #fefefe;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
+    border-radius: 6px;
+    line-height: 1.5; }
+    #Main #Index .articleList li a {
+      display: block;
+      width: 100%;
+      height: 100%;
+      text-decolation: none; }
+      #Main #Index .articleList li a .articleDate {
+        display: block; }
+      #Main #Index .articleList li a .articleTitle {
+        font-size: 32pt; }
   #Main #Article .singleArticle .articleDate {
     display: block;
     padding: 22px 0;
