--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,22 +98,23 @@ h1,h2,h3,h4,h5,h6 {
 	#Index {
 		.articleList {
 			li {
-				padding: $unit $unit / 2;
-				background-color: $main-background-color;
-				@include main-box-shadow;
-				@include main-box-radius;
-				line-height: $body-line-height;
-				a {
+				margin-bottom: $unit;
+				.articleDate {
 					display: block;
-					width: 100%;
-					height: 100%;
+					padding: $unit / 2 0;
+					text-align: right;
+					font-size: $info-font-size;
+					line-height: 1;
+				}
+				.articleTitle {
+					display: block;
 					text-decolation: none;
-					.articleDate {
-						display: block;
-					}
-					.articleTitle {
-						font-size: $header-font-size;
-					}
+					padding: $unit $unit / 2;
+					background-color: $main-background-color;
+					@include main-box-shadow;
+					@include main-box-radius;
+					line-height: $body-line-height;
+					font-size: $header-font-size;
 				}
 			}
 		}
