--- a/style.css
+++ b/style.css
@@ -87,20 +87,22 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 44px;
   z-index: 1; }
   #Main #Index .articleList li {
-    padding: 44px 22px;
-    background-color: #fefefe;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
-    border-radius: 6px;
-    line-height: 1.5; }
-    #Main #Index .articleList li a {
+    margin-bottom: 44px; }
+    #Main #Index .articleList li .articleDate {
       display: block;
-      width: 100%;
-      height: 100%;
-      text-decolation: none; }
-      #Main #Index .articleList li a .articleDate {
-        display: block; }
-      #Main #Index .articleList li a .articleTitle {
-        font-size: 32pt; }
+      padding: 22px 0;
+      text-align: right;
+      font-size: 14pt;
+      line-height: 1; }
+    #Main #Index .articleList li .articleTitle {
+      display: block;
+      text-decolation: none;
+      padding: 44px 22px;
+      background-color: #fefefe;
+      box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
+      border-radius: 6px;
+      line-height: 1.5;
+      font-size: 32pt; }
   #Main #Article .singleArticle .articleDate {
     display: block;
     padding: 22px 0;
