--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,11 +142,11 @@ h1,h2,h3,h4,h5,h6 {
 				}
 				h2 {
 					font-size: $header-font-size * 0.6;
-					margin-bottom: $unit;
+					margin-bottom: $body-font-size * 1.5;
 				}
 				h3 {
 					font-size: $header-font-size * 0.5;
-					margin-bottom: $unit;
+					margin-bottom:  $body-font-size * 1.5;
 				}
 				p {
 					margin-bottom: $body-font-size * 1.5;
