--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
     #Main #Article .singleArticle .articleBody h1 + h2,
     #Main #Article .singleArticle .articleBody h2 + h3,
     #Main #Article .singleArticle .articleBody h3 + h4,
-    #Main #Article .singleArticle .articleBody p + p {
+    #Main #Article .singleArticle .articleBody p + * {
       margin-top: 44px; }
 
 #SiteFooter {
