--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,7 +35,7 @@ a,a:hover,a:visited,a:active {
 
 h1,h2,h3,h4,h5,h6 {
 	font-size: $body-font-size;
-	font-weight: normal;
+	font-weight: bold;
 }
 
 .articleList {
@@ -162,7 +162,9 @@ h1,h2,h3,h4,h5,h6 {
 				}
 				h1 + h2,
 				h2 + h3,
-				h3 + h4,
+				h3 + h4 {
+					margin-top: $unit * 0.5;
+				}
 				p + * {
 					margin-top: $unit;
 				}
