--- a/scss/style.scss
+++ b/scss/style.scss
@@ -160,6 +160,10 @@ h1,h2,h3,h4,h5,h6 {
 
 					}
 				}
+				.gist {
+					margin-top: $body-font-size;
+					margin-bottom: $body-font-size;
+				}
 				h1 + h2,
 				h2 + h3,
 				h3 + h4 {
